Update to manage users email notifications and appeal types based on feedback from Claire

--- a/app/views/manage/manage-users/v5/detailed-email-notifications.html
+++ b/app/views/manage/manage-users/v5/detailed-email-notifications.html
@@ -118,6 +118,11 @@
         text: "Planning conditions limit and control the way you must develop."
       },
       checked: checked('planning-type','Removal or variation of conditions')
+    },
+    {
+      html: 'Something else',
+      value: 'Something else',
+      checked: checked('planning-type','Something else')
     }
   ]
 }) }}
