--- a/app/views/manage/manage-users/v5/email-notifications.html
+++ b/app/views/manage/manage-users/v5/email-notifications.html
@@ -25,13 +25,13 @@
   name: "email-notifications",
   fieldset: {
     legend: {
-      text: "Choose which email notifications the user will receive",
+      text: "Choose appeal types for the user to receive email notifications for",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--l"
     }
   },
   hint: {
-    text: "This will determine which appeal types " ~ data['new-user-email'] ~ " receives emails for."
+    text: "This will determine which appeal types " ~ data['new-user-email'] ~ " receives emails for"
     },
   items: [
     {
