updated index page for manage users

--- a/app/views/manage/manage-users/index.html
+++ b/app/views/manage/manage-users/index.html
@@ -21,25 +21,62 @@
       {{ title }}
     </h1>
 
-    {% set version = "3" %}
+    {% set version = "5" %}
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Ready for research'
+        classes: 'govuk-tag--blue govuk-!-margin-left-2',
+        text: 'Content needed'
       }) }}
     </h2>
+    <p class="govuk-!-margin-bottom-2">Here we've added new functions for LPA users to manage users. Now they can edit user email addresses and set email notifications for users based on appeal type</p>
 
-    <p class="govuk-!-margin-bottom-2">Changes:</p>
+    <p class="govuk-!-margin-bottom-2"><strong>Updated pages</strong></p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Content updates</li>
+      <li><a href="/manage/manage-users/v5/email-notifications" class="govuk-link">
+          Manage users
+        </a></li>
+         <li><a href="./manage-users/v5/detailed-email-notifications" class="govuk-link">
+          Select appeal types for email notifications
+        </a></li>
     </ul>
 
     {{ govukButton({
       html: 'View prototype',
-      href: 'v'+version+'/',
+      href: '/manage/manage-users/v5/index.html',
       isStartButton: true
     }) }}
+
+        {% set v4HTML %}
+
+      {% set version = "4" %}
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Notes not yet added</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: "/manage/manage-users/v5/index.html",
+        isStartButton: true
+      }) }}
+    {% endset -%}
+
+      {% set v3HTML %}
+
+      {% set version = "3" %}
+      <p class="govuk-!-margin-bottom-2">Changes:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Content updates</li>
+      </ul>
+
+      {{ govukButton({
+        html: 'View prototype',
+        href: 'v'+version+'/',
+        isStartButton: true
+      }) }}
+
+    {% endset -%}
 
     {% set v2HTML %}
 
@@ -66,12 +103,32 @@
       }) }}
 
     {% endset -%}
+    
+    
 
-
+    
     {{ govukAccordion({
       id: 'previous',
       classes: 'govuk-!-margin-top-9',
       items: [
+
+       {
+          heading: {
+            html: 'Version 4 <strong class="govuk-tag govuk-tag--blue govuk-!-margin-left-2">Not set</strong>'
+          },
+          content: {
+            html: v4HTML
+          }
+        },
+
+       {
+          heading: {
+            html: 'Version 3 <strong class="govuk-tag govuk-tag--green govuk-!-margin-left-2">Ready for research</strong>'
+          },
+          content: {
+            html: v3HTML
+          }
+        },
 
         {
           heading: {
