side filter fixes

--- a/app/views/manage/appeals/search/filters-side/search-applied.html
+++ b/app/views/manage/appeals/search/filters-side/search-applied.html
@@ -362,6 +362,49 @@
 
                     <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible">
 
+                    <details class="govuk-details govuk-!-margin-top-3 govuk-!-margin-padding-0 govuk-!-margin-bottom-0">
+                        <summary class="govuk-details__summary">
+                            <p class="govuk-body" style="color: #1d70b8;">
+                                Action required
+                              </p>
+                            </span>
+                        </summary>
+                        <div style="padding-left:30px;">
+                            <form class="govuk-form-group">
+                                <fieldset class="govuk-fieldset">
+                                    <div class="govuk-grid-row">
+                                        <div class="">
+                                            <fieldset class="govuk-fieldset" aria-describedby="type-of-application-hint">
+                                                <div class="govuk-checkboxes govuk-checkboxes--small">
+                                                    <div class="govuk-checkboxes__item">
+                                                        <input class="govuk-checkboxes__input" id="type-1" name="type" type="checkbox" value="Planning permission">
+                                                        <label class="govuk-label govuk-checkboxes__label" for="type-1">
+                                                            Questionnaire
+                                                        </label>
+                                                    </div>
+                                                    <div class="govuk-checkboxes__item">
+                                                        <input class="govuk-checkboxes__input" id="type-2" name="type" type="checkbox" value="Outline planning permission with some matters reserved">
+                                                        <label class="govuk-label govuk-checkboxes__label" for="type-2">
+                                                            Statement
+                                                        </label>
+                                                    </div>
+                                                    <div class="govuk-checkboxes__item">
+                                                        <input class="govuk-checkboxes__input" id="type-2" name="type" type="checkbox" value="Outline planning permission with some matters reserved">
+                                                        <label class="govuk-label govuk-checkboxes__label" for="type-2">
+                                                            None
+                                                        </label>
+                                                    </div>
+
+                                                </div>
+                                            </fieldset>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </details>
+
+                    <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible">
 
                     <hr class="govuk-section-break govuk-section-break--m govuk-section-break">
 
