--- a/app/views/appeal/ldc/index.html
+++ b/app/views/appeal/ldc/index.html
@@ -55,7 +55,7 @@
       {{ govukButton({
         html: 'View prototype',
         isStartButton: true,
-        href: '/appeal/ldc/v4/ldc-bys/before-you-start'
+        href: '/appeal/ldc/v4/reset'
       }) }}
 
     <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
