--- a/app/views/appeal/ldc/v4/prepare-appeal/inspector-need-access.html
+++ b/app/views/appeal/ldc/v4/prepare-appeal/inspector-need-access.html
@@ -21,13 +21,11 @@ Prepare appeal  </span>
     items: [
       {
         html: 'Yes',
-        value: 'Yes',
-        checked: checked('green-belt','Yes')
+        value: 'Yes'
       },
       {
         html: 'No',
-        value: 'No',
-        checked: checked('green-belt','No')
+        value: 'No'
       }
     ]
   }) }}
