--- a/app/views/appeal/ldc/v4/upload-documents/appeal-statement.html
+++ b/app/views/appeal/ldc/v4/upload-documents/appeal-statement.html
@@ -49,6 +49,15 @@
 
 {% endblock %}
 
+{% block afterContent %}
+
+  <p class="govuk-body govuk-!-margin-bottom-6">
+     <a href="../prepare-appeal/your-appeal">Return to your appeal</a>
+    </p>
+
+{% endblock %}
+
+
 
 {% block pageScripts %}
 {% endblock %}
