--- a/app/views/appeal/ldc/v4/upload-documents/draft-statement-common-ground.html
+++ b/app/views/appeal/ldc/v4/upload-documents/draft-statement-common-ground.html
@@ -15,6 +15,15 @@
 
   {% include '_includes/common/multiple-document-upload.html' %}
 
+  
+
+{% endblock %}
+{% block afterContent %}
+
+  <p class="govuk-body govuk-!-margin-bottom-6">
+     <a href="../prepare-appeal/your-appeal">Return to your appeal</a>
+    </p>
+
 {% endblock %}
 
 
