--- a/app/views/appeal/ldc/v4/upload-documents/environment-statement.html
+++ b/app/views/appeal/ldc/v4/upload-documents/environment-statement.html
@@ -2,7 +2,8 @@
 
 {% set title = 'Upload your environment statement' %}
 {% set pageName = title + ' - Planning Inspectorate'%}
-99
+{% set uploadDataKey = 'environment-statement' %}
+
 {% block questions %}
 
   <span class="govuk-caption-l">Upload documents</span>
