--- a/app/views/appeal/ldc/v4/upload-documents/planning-obligation-status.html
+++ b/app/views/appeal/ldc/v4/upload-documents/planning-obligation-status.html
@@ -2,6 +2,7 @@
 
 {% set title = 'What is the status of your planning obligation?' %}
 {% set pageName = title + ' - Planning Inspectorate'%}
+{% set formAction = '/appeal/ldc/v4/upload-documents/planning-obligation-status' %}
 
 {% block questions %}
 
