--- a/app/views/appeal/ldc/v4/prepare-appeal/task-list__prepare.html
+++ b/app/views/appeal/ldc/v4/prepare-appeal/task-list__prepare.html
@@ -2,7 +2,6 @@
   {# Calculate status for Prepare section #}
   {% set prepareRequired = [
     data['application-name'],
-    data['appellant-first-name'],
     data['contact-first-name'],
     data['telephoneNumber'],
     data['address-line-1'],
@@ -16,6 +15,9 @@
     data['other-appeals-radio']
   ] %}
   {% set prepareOptional = [] %}
+  {% if data['application-name'] == 'No' %}
+    {% set prepareOptional = prepareOptional.concat([data['appellant-first-name']]) %}
+  {% endif %}
   {% if data['existing-or-proposed'] == 'Proposed development' %}
     {% set prepareOptional = prepareOptional.concat([data['description-detail'], data['description-development-correct']]) %}
   {% endif %}
@@ -67,7 +69,7 @@
         { text: "What's the applicant's name?", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: (data['appellant-first-name'] + ' ' + data['appellant-last-name']) if data['appellant-first-name'] else "Not started", classes: "govuk-!-width-one-half" },
         { html: '<a href="appellant-name" class="govuk-link">Change</a>' if data['appellant-first-name'] else '<a href="appellant-name" class="govuk-link">Answer</a>', classes: "govuk-!-text-align-right" }
-      ],
+      ] if data['application-name'] == 'No',
       [
         { text: "Contact details", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: ((data['contact-first-name'] or '') + ' ' + (data['contact-last-name'] or '') + (('<br>' + data['contact-email']) if data['contact-email'] else '')) if (data['contact-first-name'] or data['contact-email']) else "Not started", classes: "govuk-!-width-one-half" },
