filters v5 for LPA dashboard

--- a/app/views/manage/appeals/search/v2/_includes/filters-v4.html
+++ b/app/views/manage/appeals/search/v2/_includes/filters-v4.html
@@ -78,7 +78,7 @@
   <div class="app-applied-filters" id="applied-filters-section">
 
     <div class="app-applied-filters__header">
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">Filters</h3>
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Active filters</h3>
 
       <a href="active" id="clear-filters-link" class="govuk-link">
         Clear filters
