--- a/app/views/manage/appeals/search/v2/_includes/filters-v5.html
+++ b/app/views/manage/appeals/search/v2/_includes/filters-v5.html
@@ -80,7 +80,7 @@
 <div class="app-applied-filters" aria-live="polite">
   <div class="app-applied-filters__header">
     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Applied filters</h3>
-    <!-- Link style as requested -->"
+    <!-- Link style as requested -->
       <a href="#"
       id="clear-filters"
       class="govuk-link govuk-link--no-visited-state"
