--- a/app/views/appeal/ldc/v4/prepare-appeal/description-of-development.html
+++ b/app/views/appeal/ldc/v4/prepare-appeal/description-of-development.html
@@ -8,9 +8,9 @@
 
 
   {{ govukTextarea({
-    name: "descriptionOfDevelopment",
-    id: "description-of-development",
-    value: data['descriptionOfDevelopment'],
+    name: "description-detail",
+    id: "description-detail",
+    value: data['description-detail'],
     label: {
       text: title,
       classes: "govuk-label--l",
