--- a/app/views/appeal/ldc/v4/prepare-appeal/your-appeal.html
+++ b/app/views/appeal/ldc/v4/prepare-appeal/your-appeal.html
@@ -3,7 +3,7 @@
 
 {% set title = 'Your appeal' %}
 {% set back = false %}
-{% set prototypeLinks = [{href: 'declaration', text: 'Skip to declaration'}] %}
+{% set prototypeLinks = [{href: '../upload-documents/declaration', text: 'Skip to declaration'}] %}
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
