update filter search index

--- a/app/views/manage/appeals/search/v2/active-with-filters.html
+++ b/app/views/manage/appeals/search/v2/active-with-filters.html
@@ -44,6 +44,7 @@
 
     <div class="govuk-grid-column-full">
 
+        {% include "./_includes/filters-v7.html" %}
         {% include "./_includes/secondary-nav.html" %}
 
         {# Size modifiers: xl, l, m #}
