--- a/app/views/manage/appeals/search/index.html
+++ b/app/views/manage/appeals/search/index.html
@@ -21,8 +21,8 @@
     <h2 class="govuk-heading-m">
       Version 2 – Search improvements
       {{ govukTag({
-        text: "Primary test version",
-        classes: "govuk-tag--light-blue govuk-!-margin-left-2"
+        text: "Agreed for build",
+        classes: "govuk-tag govuk-!-margin-left-2"
       }) }}
     </h2>
 
